<resources>
    <string name="app_name">Secure Scan</string>
    <string name="action_settings">Settings</string>
    <string name="servicedesc">SecureScan HCE Service</string>
    <string name="aiddescription">SecureScan AID</string>
    <string name="makecert_enter_your_full_name">Please enter your full name</string>
    <string name="makecert_requestnameandemail">Please provide your name and email address in order to create ye personal certificate.</string>
    <string name="makecert_explanation">The certificate will be created within the Android KeyStore. As such, private key operations will be performed in a Trusted Execution Environment or in a so called strongbox (separate security chip), when your device supports this.</string>
    <string name="your_name">Your name</string>
    <string name="your_email_address">Your email address</string>
    <string name="create_my_certificate">Create my certificate</string>
    <string name="show_certificate_info">Show certificate info</string>
    <string name="delete_document">Delete document</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="edit">Edit</string>
    <string name="enroll_mfp">Enroll MFP</string>
</resources>